add dynamic picklist values

--- a/force-app/main/default/lwc/wiredOpportunities/wiredOpportunities.html
+++ b/force-app/main/default/lwc/wiredOpportunities/wiredOpportunities.html
@@ -1,3 +1,12 @@
+<!-- <template>
+    <lightning-card title="Opportunity Filter" icon-name="standard:opportunity">
+        <div class="slds-m-around_medium">
+            <lightning-combobox name="stage" label="Stage" value={searchKey} placeholder="Select Stage" options={options} onchange={handleChange} ></lightning-combobox>
+            <lightning-datatable key-field="Id" data={opportunities.data} columns={columns}></lightning-datatable>
+        </div>
+    </lightning-card>
+</template> -->
+
 <template>
     <lightning-card title="Opportunity Filter" icon-name="standard:opportunity">
         <div class="slds-m-around_medium">
